--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -22,6 +22,6 @@
     <p>Our Service does not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13.</p>
 
     <h2>4. Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at: <strong>aytekingames@gmail.com</strong></p>
+    <p>If you have any questions about this Privacy Policy, please contact us at: <strong>aytekingames1@gmail.com</strong></p>
 </body>
 </html>
