--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Privacy Policy - Drop Master</title>
+    <meta name="google-adsense-account" content="ca-pub-6777032448664501">
 </head>
 <body>
     <h1>Privacy Policy</h1>
